--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,7 +8,7 @@
             <label for="exampleFormControlSelect1">Food Item</label>
             <select class="form-control" id="select-form" name="food_id">
                 <% items.forEach(function(item){ %>
-                <option value="<%= item.id %>"><%= item.name %></option>
+                <option value="<%= item.id %>"><%= item.item_name %></option>
                 <% }); %>
             </select>
         </div>
@@ -33,6 +33,16 @@
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Enter Your Address</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="address"  placeholder="Delievery Address"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="select-form">Mode Of Payment</label>
+            <select class="form-control" id="select-form" name="payment">
+                <option value="Cash On Delievery">Cash On Delievery</option>
+                <option value="Credit/Debit Card">Credit/Debit Card</option>
+                <option value="Net Banking">Net Banking</option>
+                <option value="Paytm/Paypal">Paytm/Paypal</option>
+                <option value="Amazon Pay">Amazon Pay</option>
+            </select>
         </div>
         <div class="form-group">
             <input class="btn btn-lg btn-primary btn-block" type="submit" value="Proceed">
