--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,9 @@
             <li class="nav-item">
               <a href="/orders/new" class="nav-link">New Order</a>
             </li>
+            <li class="nav-item">
+              <a href="/orders/" class="nav-link">Previous Orders</a>
+            </li>
           </ul>
           <ul class="navbar-nav">
               <% if(!currentUser){ %>
@@ -41,3 +44,27 @@
           </ul>
         </div>
       </nav>
+
+      <div class="container">
+        <% if(error && error.length > 0){ %>
+        <div class="alert alert-danger" role="alert">
+          <%= error %>
+        </div>
+        <% } %>
+        <% if(loginMessage && loginMessage.length > 0){ %>
+        <div class="alert alert-danger" role="alert">
+          <%= loginMessage %>
+        </div>
+        <% } %>
+        <% if(signupMessage && signupMessage.length > 0){ %>
+        <div class="alert alert-danger" role="alert">
+          <%= signupMessage %>
+        </div>
+        <% } %>
+        <% if(success && success.length > 0){ %>
+        <div class="alert alert-success" role="alert">
+          <%= success %>
+        </div>
+        <% } %>
+      </div>
+
