--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Food Ordering App</title>
+  <title>Food Ordering App</title>
+    <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -24,8 +28,14 @@
             <li class="nav-item">
               <a href="/orders/" class="nav-link">Previous Orders</a>
             </li>
+            <li class="nav-item">
+              <a href="/reviews/" class="nav-link">Reviews</a>
+            </li>
           </ul>
           <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a href="/reviews/new" class="nav-link">Review Us</a>
+                  </li>
               <% if(!currentUser){ %>
                   <li class="nav-item">
                     <a href="/login" class="nav-link">Login</a>
