--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,7 +1,7 @@
 <%- include("./partials/header") %>
 
 <div class="container">
-    <h2 class="mt-3 mb-4">Your Previous Orders</h2>
+    <h2 class="mt-3 mb-4">Your Orders</h2>
     <div class="row">
         <% orders.forEach(function(order){ %>
         <div class="col md-3">
