--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -4,7 +4,7 @@
         <div class="container">
             <h1>Welcome to Food Ordering App</h1>
             <p>Order your favourite dishes here and get them delivered to your doorstep in less than 30 mins. Select dishes from your preferred cuisine from our wide variety of menu</p>
-            <a href="/orders/new" class="btn btn-primary" style="width: 30%;">Order</a>
+            <a href="/orders/new" class="btn btn-info" style="width: 30%;">Order</a>
         </div>
     </header>
 
