--- a/views/new.ejs
+++ b/views/new.ejs
@@ -45,7 +45,7 @@
             </select>
         </div>
         <div class="form-group">
-            <input class="btn btn-lg btn-primary btn-block" type="submit" value="Proceed">
+            <input class="btn btn-lg btn-info btn-block" type="submit" value="Proceed">
         </div>
     </form>
 </div>
